updated picture of Dante

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -37,8 +37,7 @@
       <!-- Add margin if you want to see some of the overlay behind the modal-->
       <div class="modal-content">
         <!--Body-->
-            <div class="modal-left">
-              <img src='dante.jpg' alt="Modal Image for TITLE" class='modal-image'>
+            <div class="modal-left" style="background: url(dante.png); background-size: cover; background-position: center center;">
             </div>
             <div class='modal-right'>
               <h2 class='modal-title'>The Most 5 Star Rated App</h2>
@@ -74,8 +73,7 @@
             <a href="" class='secondary_link'>Learn More</a>
           </div>
         </div>
-        <div class="modal-left">
-          <img src='dante.jpg' alt="Modal Image for TITLE" class='modal-image'>
+        <div class="modal-left" style="background: url(dante.png); background-size: cover; background-position: center center;">
         </div>
       </div>
     </div>
