--- a/example/public/index.html
+++ b/example/public/index.html
@@ -19,6 +19,9 @@
 
   <button class="modal-open bg-transparent border border-gray-500 hover:border-indigo-500 text-gray-500 hover:text-indigo-500 font-bold py-2 px-4 rounded-full mr-5" data-modal='modal-1'>Image Left</button>
   <button class="modal-open bg-transparent border border-gray-500 hover:border-indigo-500 text-gray-500 hover:text-indigo-500 font-bold py-2 px-4 rounded-full mr-5" data-modal='modal-2'>Image Right</button>
+  <button class="modal-open bg-transparent border border-gray-500 hover:border-indigo-500 text-gray-500 hover:text-indigo-500 font-bold py-2 px-4 rounded-full mr-5" data-modal='modal-3'>Image Top</button>
+  <button class="modal-open bg-transparent border border-gray-500 hover:border-indigo-500 text-gray-500 hover:text-indigo-500 font-bold py-2 px-4 rounded-full mr-5" data-modal='modal-4'>Center</button>
+
 </section>
 
   <!--Modal-->
@@ -32,7 +35,7 @@
       <span class="text-sm">(Esc)</span>
     </div>
 
-    <div class="modal-container w-11/12 lg:w-1/2">
+    <div class="modal-container w-11/12 lg:w-1/2 modal-large">
 
       <!-- Add margin if you want to see some of the overlay behind the modal-->
       <div class="modal-content">
@@ -74,6 +77,60 @@
           </div>
         </div>
         <div class="modal-left" style="background: url(dante.png); background-size: cover; background-position: center center;">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal opacity-0 pointer-events-none" id="modal-3">
+    <div class="modal-overlay modal-bg"></div>
+
+    <div class="modal-close">
+      <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+        <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+      </svg>
+      <span class="text-sm">(Esc)</span>
+    </div>
+
+    <div class="modal-container w-11/12 lg:w-1/3 modal-top-align">
+      <!-- Add margin if you want to see some of the overlay behind the modal-->
+      <div class="modal-content flex-wrap">
+        <!--Body-->
+        <div class="modal-top w-full">
+          <img src="hirecollin.jpg" class='w-full'>
+        </div>
+        <div class='modal-bottom w-full'>
+          <h2 class='modal-title'>The Most 5 Star Rated App</h2>
+          <p class='modal-text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor aliqua.</p>
+          <div class='cta_container'>
+            <a class='modal-btn'>Get Started</a>
+            <a href="" class='secondary_link'>Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal opacity-0 pointer-events-none" id="modal-4">
+    <div class="modal-overlay modal-bg"></div>
+
+    <div class="modal-close">
+      <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+        <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+      </svg>
+      <span class="text-sm">(Esc)</span>
+    </div>
+
+    <div class="modal-container w-11/12 lg:w-1/3 modal-top-align">
+      <!-- Add margin if you want to see some of the overlay behind the modal-->
+      <div class="modal-content flex-wrap">
+        <!--Body-->
+        <div class='modal-bottom w-full text-center'>
+          <h2 class='modal-title'>The Most 5 Star Rated App</h2>
+          <p class='modal-text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor aliqua.</p>
+          <div class='cta_container'>
+            <a href="#" class='modal-btn'>Get Started</a>
+          </div>
         </div>
       </div>
     </div>
